--- a/pastebin/awk.html
+++ b/pastebin/awk.html
@@ -26,43 +26,43 @@
     <tr><th><a href="https://pastebin.com/YBWnJzmt">yc543 (awk)</a></th><td>20190105</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/XByiQ7fC">yc725 (awk)</a></th><td>20190104</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/LDN6R8bC">yc3032 (awk)</a></th><td>20190102</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/cZZCNuWF">yc3023 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/Khp7X9pf">yc525 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/SsDDV880">yc22 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/tPVYRDNi">yc123 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/ZcWF2Zc2">yc729 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/SQGvZQe2">yc730 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/SsMSZ50M">yc24 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/wME68FCh">yc21 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/Ew5JSKfM">yc441 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/fW3wFr2P">yc353 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/4228GCVv">yc706 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/0X2ez3tW">yc419 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/STFHGMsb">yc487 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/YNaZzTBm">yc499 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/7WD7QuGx">yc512 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/yD0gvbuV">yc504 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/kDyf5KB8">yc358 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/syHd3Q41">yc167 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/nXAaMcDi">yc333 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/vW2jcKXB">yc159 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/hnUmbB1r">yc149 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/Ber6QV8V">yc112 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/Pqr0VVXq">yc531 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/f6eE7tM2">yc79 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/xhUdB1dB">yc349 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/bTG2rVc5">yc547 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/zuRvuSds">yc411 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/S9NXWuE8">ac-abc081b (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/atUV5uuy">ac-abc081a (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/JsHuGMFJ">ac-abc086b (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/jTFGVxge">ac-pa (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/j27Jq3aT">yc480 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/mZUGzrpU">yc627 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/uRtHsbAg">yc3004 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/jLzdr1nY">yc9011 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/qEURhs0y">yc637 (awk)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/S7SpAKUP">yc207 (awk)</a></th><td></td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/cZZCNuWF">yc3023 (awk)</a></th><td>20190102</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Khp7X9pf">yc525 (awk)</a></th><td>20181231</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/SsDDV880">yc22 (awk)</a></th><td>20181230</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/tPVYRDNi">yc123 (awk)</a></th><td>20181229</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/ZcWF2Zc2">yc729 (awk)</a></th><td>20181229</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/SQGvZQe2">yc730 (awk)</a></th><td>20181229</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/SsMSZ50M">yc24 (awk)</a></th><td>20181228</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/wME68FCh">yc21 (awk)</a></th><td>20181228</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Ew5JSKfM">yc441 (awk)</a></th><td>20181226</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/fW3wFr2P">yc353 (awk)</a></th><td>20181226</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/4228GCVv">yc706 (awk)</a></th><td>20180701</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/0X2ez3tW">yc419 (awk)</a></th><td>20180610</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/STFHGMsb">yc487 (awk)</a></th><td>20180608</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/YNaZzTBm">yc499 (awk)</a></th><td>20180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/7WD7QuGx">yc512 (awk)</a></th><td>20180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/yD0gvbuV">yc504 (awk)</a></th><td>20180603</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/kDyf5KB8">yc358 (awk)</a></th><td>20180529</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/syHd3Q41">yc167 (awk)</a></th><td>20180528</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/nXAaMcDi">yc333 (awk)</a></th><td>20180528</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/vW2jcKXB">yc159 (awk)</a></th><td>20180527</td><td>20190105</td></tr>
+    <tr><th><a href="https://pastebin.com/hnUmbB1r">yc149 (awk)</a></th><td>20180527</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Ber6QV8V">yc112 (awk)</a></th><td>20180527</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Pqr0VVXq">yc531 (awk)</a></th><td>20180527</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/f6eE7tM2">yc79 (awk)</a></th><td>20180526</td><td>20181225</td></tr>
+    <tr><th><a href="https://pastebin.com/xhUdB1dB">yc349 (awk)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/bTG2rVc5">yc547 (awk)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/zuRvuSds">yc411 (awk)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/S9NXWuE8">ac-abc081b (awk)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/atUV5uuy">ac-abc081a (awk)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/JsHuGMFJ">ac-abc086b (awk)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/jTFGVxge">ac-pa (awk)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/j27Jq3aT">yc480 (awk)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/mZUGzrpU">yc627 (awk)</a></th><td>20180522</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/uRtHsbAg">yc3004 (awk)</a></th><td>20180522</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/jLzdr1nY">yc9011 (awk)</a></th><td>20180522</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/qEURhs0y">yc637 (awk)</a></th><td>20180522</td><td>20180528</td></tr>
+    <tr><th><a href="https://pastebin.com/S7SpAKUP">yc207 (awk)</a></th><td>20180522</td><td></td></tr>
     </table>
   </section>
 
