--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -82,9 +82,66 @@
     <tr><th><a href="https://pastebin.com/fFUJJ7iX">yc490</a></th><td>20180604</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/7iibDS74">yc504</a></th><td>20180603</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/DRBuPTRM">yc378</a></th><td>20180603</td><td>20190313</td></tr>
+    <tr><th><a href="https://pastebin.com/d6VvPKxx">yc358</a></th><td>20180529</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/NTXMyrKh">yc167</a></th><td>20180528</td><td>20190118</td></tr>
+    <tr><th><a href="https://pastebin.com/ZZ8PgpaR">yc167 (gmp)</a></th><td>20180528</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/h57izWRq">yc167 (ssl bn)</a></th><td>20180528</td><td>20190314</td></tr>
+    <tr><th><a href="https://pastebin.com/6r7yVnAb">yc333</a></th><td>20180528</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/cJTgDtD3">yc256</a></th><td>20180528</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/XRHRSaja">yc166</a></th><td>20180528</td><td>20190104</td></tr>
+    <tr><th><a href="https://pastebin.com/cGHjwxL2">yc159</a></th><td>20180527</td><td>20190104</td></tr>
+    <tr><th><a href="https://pastebin.com/nxmSL8jq">yc149</a></th><td>20180527</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/hSsj52be">yc652</a></th><td>20180527</td><td>20180708</td></tr>
+    <tr><th><a href="https://pastebin.com/mPiW1tLG">yc112</a></th><td>20180527</td><td>20181222</td></tr>
+    <tr><th><a href="https://pastebin.com/epqct6gB">yc531</a></th><td>20180527</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/t63hmqVA">yc548</a></th><td>20180526</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/J5PM4D6q">yc617</a></th><td>20180524</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Ys9jDJ3P">yc678</a></th><td>20180524</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/P5A04t8x">yc349</a></th><td>20180523</td><td>20180525</td></tr>
+    <tr><th><a href="https://pastebin.com/rr3Xm6e2">yc628</a></th><td>20180523</td><td></td></tr>
     <tr><th>...</th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/UJ0hyPbu">yc70</a></th><td>20180521</td><td>20190511</td></tr>
+    <tr><th><a href="https://pastebin.com/a18LVwZB">yc3032</a></th><td>20180411</td><td>20190104</td></tr>
+    <tr><th><a href="https://pastebin.com/JEFfSazW">yc542</a></th><td>20180329</td><td>20190106</td></tr>
+    <tr><th><a href="https://pastebin.com/Jt98pe0K">yc537</a></th><td>20180329</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/x0TVntBc">yc509</a></th><td>20180329</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/NKpY5i5p">yc581</a></th><td>20180328</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/y801WZc0">yc345</a></th><td>20180328</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/QGD09UuX">yc570</a></th><td>20180328</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/gfvnpKi3">yc591</a></th><td>20180328</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/W3SYnK57">yc604</a></th><td>20180328</td><td>20190106</td></tr>
     <tr><th><a href="https://pastebin.com/SWQyn7QF">yc191</a></th><td>20180328</td><td>20190314</td></tr>
+    <tr><th><a href="https://pastebin.com/memiV5DL">yc175</a></th><td>20180328</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/J3NtrHT4">yc289</a></th><td>20180327</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/hhKjkUvg">yc446</a></th><td>20180327</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/PK5v6K7n">yc64</a></th><td>20180325</td><td>20190430</td></tr>
+    <tr><th><a href="https://pastebin.com/HHFMm80Q">yc3022</a></th><td>20180324</td><td>20181226</td></tr>
+    <tr><th><a href="https://pastebin.com/51xKBq6d">yc311</a></th><td>20180324</td><td>20181229</td></tr>
+    <tr><th><a href="https://pastebin.com/YrVQJdE2">yc637</a></th><td>20180324</td><td>20190118</td></tr>
+    <tr><th><a href="https://pastebin.com/9JLBJpNj">yc51</a></th><td>20180324</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/J8yyz6Qi">yc22</a></th><td>20180324</td><td>20181230</td></tr>
+    <tr><th><a href="https://pastebin.com/AZ2GUxQb">yc56</a></th><td>20180324</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/UfkX6vmZ">yc88</a></th><td>20180324</td><td>20181225</td></tr>
+    <tr><th><a href="https://pastebin.com/uddxAa7u">yc593</a></th><td>20180323</td><td>20181224</td></tr>
+    <tr><th><a href="https://pastebin.com/QDj5ZKiE">yc143</a></th><td>20180323</td><td>20181224</td></tr>
+    <tr><th><a href="https://pastebin.com/DPCNS53r">yc104</a></th><td>20180323</td><td>20181226</td></tr>
+    <tr><th><a href="https://pastebin.com/UJ0hyPbu">yc70</a></th><td>20180521</td><td>20190511</td></tr>
+    <tr><th><a href="https://pastebin.com/4nyNwJek">yc79</a></th><td>20180321</td><td>20181225</td></tr>
+    <tr><th><a href="https://pastebin.com/mS44g5Hb">yc652</a></th><td>20180321</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/sWxC89sj">yc29</a></th><td>20180320</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/a0N51hdx">yc32</a></th><td>20180320</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/DCjme5C5">yc35</a></th><td>20180320</td><td>20190820</td></tr>
+    <tr><th><a href="https://pastebin.com/xyuhDSAj">yc26</a></th><td>20180320</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/YqQiBEkg">yc21</a></th><td>20180320</td><td>20181228</td></tr>
+    <tr><th><a href="https://pastebin.com/wSuEbPzL">yc18</a></th><td>20180320</td><td>20181225</td></tr>
+    <tr><th><a href="https://pastebin.com/MkxYDRki">yc5</a></th><td>20180319</td><td>20190106</td></tr>
+    <tr><th><a href="https://pastebin.com/QivUEQiP">yc24</a></th><td>20180319</td><td>20181228</td></tr>
+    <tr><th><a href="https://pastebin.com/T32DfDw3">yc83</a></th><td>20180318</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/PgU674fC">yc264</a></th><td>20180318</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/DftsgEb1">yc46</a></th><td>20180318</td><td>20181228</td></tr>
+    <tr><th><a href="https://pastebin.com/nCcMV5Gu">yc279</a></th><td>20180317</td><td>20180324</td></tr>
+    <tr><th><a href="https://pastebin.com/gzZGkW3Z">yc481</a></th><td>20180317</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/WAUzrfZu">yc188</a></th><td>20180316</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/7Tcu3z6P">yc128</a></th><td>20180316</td><td>20181226</td></tr>
     <tr><th><a href="https://pastebin.com/H1YPuJny">yc163</a></th><td>20180316</td><td>20181226</td></tr>
     </table>
   </section>
