--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -99,6 +99,16 @@
     <tr><th><a href="https://pastebin.com/Ys9jDJ3P">yc678</a></th><td>20180524</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/P5A04t8x">yc349</a></th><td>20180523</td><td>20180525</td></tr>
     <tr><th><a href="https://pastebin.com/rr3Xm6e2">yc628</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/rAavyRjK">ac-abc081b (lua)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/mUNHrmd5">ac-abc081a (lua)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/xQifbRN6">ac-abc086a (lua)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/vAQ8cAQJ">ac-pa (lua)</a></th><td>20180523</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/pThKjLrW">yc688</a></th><td>20180521</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/QDpQSXPA">yc687</a></th><td>20180521</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/QcGSnE8d">yc500 (ssl bn)</a></th><td>20180515</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/UBNMZvMA">yc500</a></th><td>20180514</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/j1rN1GDe">yc477</a></th><td>20180514</td><td>20180515</td></tr>
+    <tr><th><a href="https://pastebin.com/qmSwAUHF">yc341</a></th><td>20180514</td><td>20190314</td></tr>
     <tr><th>...</th><td></td><td></td></tr>
     <tr><th><a href="https://pastebin.com/a18LVwZB">yc3032</a></th><td>20180411</td><td>20190104</td></tr>
     <tr><th><a href="https://pastebin.com/JEFfSazW">yc542</a></th><td>20180329</td><td>20190106</td></tr>
