--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -20,6 +20,7 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/1gA76hLe">yc779</a></th><td>20190820</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/7xAk64u7">yc851</a></th><td>20190802</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/prqryXWc">wrapping in pcall</a></th><td>20190720</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/MU1Me4tN">yc804</a></th><td>20190720</td><td></td></tr>
