--- a/pastebin/ja_jp.html
+++ b/pastebin/ja_jp.html
@@ -20,6 +20,7 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/GLym7jTq">DFUモード (iPad 7gen)</a></th><td>20191128</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/ZNjnMeqs">額面</a></th><td>20180713</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/1hCBc9q7">TOEIC LR 当日の留意事項</a></th><td>20180105</td><td>20180316</td></tr>
     </table>
