Change the date format of index files

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <section>
     <table>
     <tr><th><a href="/pastebin/index.html">Index of my pastes</a></th><td>随時</td></tr>
-    <tr><th><a href="/experiment/using-FileReader.html">FileReaderの練習</a></th><td>2018/11/13</td></tr>
-    <tr><th><a href="/the3rdSunOfOct/timoku.html">23種類の地目</a></th><td>2018/11/13</td></tr>
+    <tr><th><a href="/experiment/using-FileReader.html">FileReaderの練習</a></th><td>181113</td></tr>
+    <tr><th><a href="/the3rdSunOfOct/timoku.html">23種類の地目</a></th><td>181113</td></tr>
     </table>
   </section>
 
