--- a/pastebin/dc.html
+++ b/pastebin/dc.html
@@ -20,45 +20,45 @@
 
   <section>
     <table>
-    <tr><th><a href="https://pastebin.com/Q3pi1Mpu">yc779 (dc)</a></th><td>20190820</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/6AiYpFiS">yc858 (dc)</a></th><td>20190816</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/6kcvCJJK">yc857 (dc)</a></th><td>20190815</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/q7vwpa6J">yc191 (dc)</a></th><td>20190314</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/3xqNEZbT">yc793 (dc)</a></th><td>20190305</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/c90pN43N">yc791 (dc)</a></th><td>20190304</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/KmEgUjVn">yc21 (dc)</a></th><td>20190216</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/vptA4i25">yc785 (dc)</a></th><td>20190216</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/3Q3mqW1A">yc9000 (dc)</a></th><td>20190213</td><td>20190218</td></tr>
-    <tr><th><a href="https://pastebin.com/MePWr80h">yc3032 (dc)</a></th><td>20190213</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/zz3cdXFq">yc500 (dc)</a></th><td>20190209</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/2fsuYwVt">yc216 (dc)</a></th><td>20190208</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/g4tuMYRJ">yc780 (dc)</a></th><td>20190111</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/bkG5K6LA">yc779 (dc)</a></th><td>20190111</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/LtCK35fQ">yc604 (dc)</a></th><td>20190106</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/tLNCfmx7">yc648 (dc)</a></th><td>20190101</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/bYYm3eH8">yc671 (dc)</a></th><td>20190101</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/5d9UVxKY">yc666 (dc)</a></th><td>20181230</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/qiTibGbz">yc72 (dc)</a></th><td>20181229</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/kWtPrFUd">yc149 (dc)</a></th><td>20181228</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/BKpKX3wg">yc46 (dc)</a></th><td>20181228</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/iTqW96kt">yc481 (dc)</a></th><td>20181008</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/5hC1gd5L">yc480 (dc)</a></th><td>20181008</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/cX2MUVHV">yc419 (dc)</a></th><td>20180610</td><td>20190107</td></tr>
-    <tr><th><a href="https://pastebin.com/Gi8PX2NH">yc487 (dc)</a></th><td>20180608</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/LgN3vJfU">yc428 (dc)</a></th><td>20180605</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/6QSAd2Z7">yc512 (dc)</a></th><td>20180604</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/7jKLiv7f">yc499 (dc)</a></th><td>20180604</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/9dGdCu7i">yc378 (dc)</a></th><td>20180603</td><td>20190313</td></tr>
-    <tr><th><a href="https://pastebin.com/4jNzaHh6">yc395 (dc)</a></th><td>20180601</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/BEdMp7uM">yc637 (dc)</a></th><td>20180530</td><td>20190815</td></tr>
-    <tr><th><a href="https://pastebin.com/sGb6RkeH">yc9002 (dc)</a></th><td>20180530</td><td>20181010</td></tr>
-    <tr><th><a href="https://pastebin.com/1A62bJ4b">yc3022 (dc)</a></th><td>20180530</td><td>20181226</td></tr>
-    <tr><th><a href="https://pastebin.com/sAR4Rrx3">yc358 (dc)</a></th><td>20180529</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/HvAg7c2c">yc167 (dc)</a></th><td>20180528</td><td>20180529</td></tr>
-    <tr><th><a href="https://pastebin.com/MaDDapwk">yc159 (dc)</a></th><td>20180528</td><td>20190104</td></tr>
-    <tr><th><a href="https://pastebin.com/kzge6Qbc">yc333 (dc)</a></th><td>20180528</td><td>20190820</td></tr>
-    <tr><th><a href="https://pastebin.com/VYmHPwRM">yc166 (dc)</a></th><td>20180528</td><td>20190104</td></tr>
-    <tr><th><a href="https://pastebin.com/ZfCFw0SS">yc311 (dc)</a></th><td>20180523</td><td>20190820</td></tr>
+    <tr><th><a href="https://pastebin.com/Q3pi1Mpu">yc779 (dc)</a></th><td>190820</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/6AiYpFiS">yc858 (dc)</a></th><td>190816</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/6kcvCJJK">yc857 (dc)</a></th><td>190815</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/q7vwpa6J">yc191 (dc)</a></th><td>190314</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/3xqNEZbT">yc793 (dc)</a></th><td>190305</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/c90pN43N">yc791 (dc)</a></th><td>190304</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/KmEgUjVn">yc21 (dc)</a></th><td>190216</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/vptA4i25">yc785 (dc)</a></th><td>190216</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/3Q3mqW1A">yc9000 (dc)</a></th><td>190213</td><td>190218</td></tr>
+    <tr><th><a href="https://pastebin.com/MePWr80h">yc3032 (dc)</a></th><td>190213</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/zz3cdXFq">yc500 (dc)</a></th><td>190209</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/2fsuYwVt">yc216 (dc)</a></th><td>190208</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/g4tuMYRJ">yc780 (dc)</a></th><td>190111</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/bkG5K6LA">yc779 (dc)</a></th><td>190111</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/LtCK35fQ">yc604 (dc)</a></th><td>190106</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/tLNCfmx7">yc648 (dc)</a></th><td>190101</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/bYYm3eH8">yc671 (dc)</a></th><td>190101</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/5d9UVxKY">yc666 (dc)</a></th><td>181230</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/qiTibGbz">yc72 (dc)</a></th><td>181229</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/kWtPrFUd">yc149 (dc)</a></th><td>181228</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/BKpKX3wg">yc46 (dc)</a></th><td>181228</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/iTqW96kt">yc481 (dc)</a></th><td>181008</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/5hC1gd5L">yc480 (dc)</a></th><td>181008</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/cX2MUVHV">yc419 (dc)</a></th><td>180610</td><td>190107</td></tr>
+    <tr><th><a href="https://pastebin.com/Gi8PX2NH">yc487 (dc)</a></th><td>180608</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/LgN3vJfU">yc428 (dc)</a></th><td>180605</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/6QSAd2Z7">yc512 (dc)</a></th><td>180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/7jKLiv7f">yc499 (dc)</a></th><td>180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/9dGdCu7i">yc378 (dc)</a></th><td>180603</td><td>190313</td></tr>
+    <tr><th><a href="https://pastebin.com/4jNzaHh6">yc395 (dc)</a></th><td>180601</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/BEdMp7uM">yc637 (dc)</a></th><td>180530</td><td>190815</td></tr>
+    <tr><th><a href="https://pastebin.com/sGb6RkeH">yc9002 (dc)</a></th><td>180530</td><td>181010</td></tr>
+    <tr><th><a href="https://pastebin.com/1A62bJ4b">yc3022 (dc)</a></th><td>180530</td><td>181226</td></tr>
+    <tr><th><a href="https://pastebin.com/sAR4Rrx3">yc358 (dc)</a></th><td>180529</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/HvAg7c2c">yc167 (dc)</a></th><td>180528</td><td>180529</td></tr>
+    <tr><th><a href="https://pastebin.com/MaDDapwk">yc159 (dc)</a></th><td>180528</td><td>190104</td></tr>
+    <tr><th><a href="https://pastebin.com/kzge6Qbc">yc333 (dc)</a></th><td>180528</td><td>190820</td></tr>
+    <tr><th><a href="https://pastebin.com/VYmHPwRM">yc166 (dc)</a></th><td>180528</td><td>190104</td></tr>
+    <tr><th><a href="https://pastebin.com/ZfCFw0SS">yc311 (dc)</a></th><td>180523</td><td>190820</td></tr>
     </table>
   </section>
 
