Update some experiment category files

--- a/experiment/AWK-resources.html
+++ b/experiment/AWK-resources.html
@@ -74,7 +74,7 @@
 <footer>
   <p>
     <a href="/">top</a> &gt;
-    手習い &gt;
+    <a href="/experiment/">手習い</a> &gt;
     AWKのリソース
   </p>
   <p>&copy; 2018 nobi56.github.io</p>
