--- a/experiment/using-FileReader.html
+++ b/experiment/using-FileReader.html
@@ -36,7 +36,7 @@ https://web-designer.cman.jp/javascript_ref/window/size/
 <footer>
   <p>
     <a href="/">top</a> &gt;
-    試作 &gt;
+    <a href="/experiment/">手習い</a> &gt;
     FileReaderの練習
   </p>
   <p>&copy; 2018 nobi56.github.io</p>
