--- a/experiment/AWK-resources.html
+++ b/experiment/AWK-resources.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="AWKを読み書きするにあたってのリソース">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://nobi56.github.io/experiment/AWK-resources.html">
-  <link rel="stylesheet" href="/assets/article.css"></head>
+  <link rel="stylesheet" href="article.css"></head>
 </head>
 <body>
 
@@ -67,6 +67,8 @@
 <section>
   <p>その他、同じようなつまづきを探す場合等:</p>
   <p><a href="https://stackoverflow.com/search?q=AWK">https://stackoverflow.com/search?q=AWK</a></p>
+  <p>例) ライブラリの読み込み方法を知りたい</p>
+  <p><a href="https://stackoverflow.com/questions/28462821/include-library-of-functions-in-awk">include library of functions in awk - Stack Overflow</a></p>
 </section>
 
 </aside>
