--- a/experiment/AWK-resources.html
+++ b/experiment/AWK-resources.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="AWKを読み書きするにあたってのリソース">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://nobi56.github.io/experiment/AWK-resources.html">
-  <link rel="stylesheet" href="article.css"></head>
+  <link rel="stylesheet" href="/assets/article.css"></head>
 </head>
 <body>
 
