--- a/experiment/AWK-resources.html
+++ b/experiment/AWK-resources.html
@@ -39,11 +39,13 @@
 <p>ドキュメント</p>
 
 <ul>
+<li><a href="https://invisible-island.net/mawk/manpage/mawk.html">mawk(1)</a></li>
 <li><a href="https://www.gnu.org/software/gawk/manual/">Gawk: Effective AWK Programming</a></li>
 <li><a href="https://en.wikipedia.org/wiki/The_AWK_Programming_Language">The AWK Programming Language</a>,
 <a href="https://news.ycombinator.com/item?id=13451454">(HN)</a></li>
 </ul>
 
+<p>MAWKのmanページはドキュメントを含む。13項立ての解説に5つの用例、仕様と実装の互換性に関する記述も付録。</p>
 <p>GAWKの<a href="https://www.gnu.org/software/gawk/manual/">ドキュメント</a>を読めば大抵の問題は解決(するはず)。実例も豊富で、独自拡張であるところはしっかり区別された記述、マニュアルでありチュートリアル。</p>
 <p><a href="https://en.wikipedia.org/wiki/The_AWK_Programming_Language">The AWK Programming Language</a>はとにかく楽しい、何よりも楽しいドキュメント。</p>
 </section>
