--- a/experiment/AWK-resources.html
+++ b/experiment/AWK-resources.html
@@ -45,7 +45,7 @@
 <a href="https://news.ycombinator.com/item?id=13451454">(HN)</a></li>
 </ul>
 
-<p>MAWKのmanページはドキュメントを含む。13項立ての解説に5つの用例、仕様と実装の互換性に関する記述も付録。</p>
+<p>MAWKのmanページは言語そのもののドキュメントを含む。13項立ての解説に5つの用例、仕様と実装の互換性に関する記述も付録。</p>
 <p>GAWKの<a href="https://www.gnu.org/software/gawk/manual/">ドキュメント</a>を読めば大抵の問題は解決(するはず)。実例も豊富で、独自拡張であるところはしっかり区別された記述、マニュアルでありチュートリアル。</p>
 <p><a href="https://en.wikipedia.org/wiki/The_AWK_Programming_Language">The AWK Programming Language</a>はとにかく楽しい、何よりも楽しいドキュメント。</p>
 </section>
