--- a/the3rdSunOfOct/timoku.html
+++ b/the3rdSunOfOct/timoku.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="地目についての条文まとめ (不規99/不準68/不準69)">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://nobi56.github.io/the3rdSunOfOct/timoku.html">
-  <link rel="stylesheet" href="/assets/article.css"></head>
+  <link rel="stylesheet" href="/assets/article.css">
 </head>
 <body>
 
@@ -94,7 +94,8 @@
     <li>坑口又はやぐら敷地は、雑種地</li>
     <li>製錬所の煙道敷地は、雑種地</li>
     <li>木場の区域内の土地は、建物がない限り、雑種地</li>
-  </ol>
+    </ul>
+</ol>
 </section>
 
 </article>
