--- a/the3rdSunOfOct/timoku.html
+++ b/the3rdSunOfOct/timoku.html
@@ -24,62 +24,71 @@
 <section id="001">
 <ol>
   <li>田 農耕地で用水を利用して耕作する土地</li>
-  <li>畑 農耕地で用水を利用しないで耕作する土地</li>
+  <li>畑 農耕地で用水を利用しないで耕作する土地
     <ul>
     <li>牧草栽培地は、畑</li>
     </ul>
-  <li>宅地 建物の敷地及びその維持若しくは効用を果すために必要な土地</li>
+  </li>
+  <li>宅地 建物の敷地及びその維持若しくは効用を果すために必要な土地
     <ul>
     <li>耕作地(田・畑等)の区域内にある農具小屋等の敷地は、その建物が永久的設備と認められるものに限り、宅地</li>
     <li>海産物を乾燥する場所の区域内に永久的設備と認められる建物がある場合、その敷地の区域に属する部分だけを、宅地</li>
     <li>工場/営業場に接続する物干場/さらし場は、宅地</li>
     <li>ガスタンク敷地/石油タンク敷地は、宅地</li>
-    <li>遊園地/運動場/ゴルフ場/飛行場において</li>
+    <li>遊園地/運動場/ゴルフ場/飛行場において
       <ul>
       <li>建物の利用を主とする建物敷地以外の部分が建物に附随する庭園に過ぎないと認められる場合、その全部を一団として宅地</li>
       <li>一部に建物がある場合でも、建物敷地以外の土地の利用を主とし、建物はその附随的なものに過ぎないと認められる場合、その全部を一団として雑種地<br>
           ただし、道路/溝/堀その他により、建物敷地として判然区分することができる状況にあるものは、これを区分して宅地としてもOK</li>
       </ul>
-    <li>競馬場内の土地について</li>
+    </li>
+    <li>競馬場内の土地について
       <ul>
       <li>事務所/観覧席/厩舎等永久的設備と認められる建物の敷地及びその附属する土地は、宅地</li>
       <li>馬場は、雑種地</li>
       <li>その他の土地は、現況に応じてその地目を定める</li>
       </ul>
-    <li>テニスコート/プールについて</li>
+    </li>
+    <li>テニスコート/プールについて
       <ul>
       <li>宅地に接続するものは、宅地</li>
       <li>その他は、雑種地</li>
       </ul>
-    <li>火葬場について</li>
+    </li>
+    <li>火葬場について
       <ul>
       <li>その構内に建物の設備がある時、構内全部を宅地</li>
       <li>建物の設備のない時、雑種地</li>
       </ul>
-    <li>陶器かまどの設けられた土地について</li>
+    </li>
+    <li>陶器かまどの設けられた土地について
       <ul>
       <li>永久的設備と認められる雨覆いがある時、宅地</li>
       <li>その設備がない時、雑種地</li>
       </ul>
+    </li>
     </ul>
+  </li>
   <li>学校用地 校舎、附属施設の敷地及び運動場</li>
   <li>鉄道用地 鉄道の駅舎、附属施設及び路線の敷地</li>
   <li>塩田 海水を引き入れて塩を採取する土地</li>
   <li>鉱泉地 鉱泉(温泉を含む)の湧出口及びその維持に必要な土地</li>
   <li>池沼 かんがい用水でない水の貯留池</li>
   <li>山林 耕作の方法によらないで竹木の生育する土地</li>
-  <li>牧場 家畜を放牧する土地</li>
+  <li>牧場 家畜を放牧する土地
     <ul>
     <li>牧畜のために使用する建物の敷地、牧草栽培地及び林地等で牧場地域内にあるものは、すべて牧場</li>
     </ul>
+  </li>
   <li>原野 耕作の方法によらないで雑草、かん木類の生育する土地</li>
   <li>墓地 人の遺体又は遺骨を埋葬する土地</li>
   <li>境内地 境内に属する土地であって、宗教法人法第3条第2号及び第3号に掲げる土地 (宗教法人の所有に属しないものを含む)</li>
   <li>運河用地 運河法第12条第1項第1号又は第2号に掲げる土地</li>
-  <li>水道用地 専ら給水の目的で敷設する水道の水源地、貯水池、ろ水場又は水道線路に要する土地</li>
+  <li>水道用地 専ら給水の目的で敷設する水道の水源地、貯水池、ろ水場又は水道線路に要する土地
     <ul>
     <li>水力発電のための水路/排水路は、雑種地</li>
     </ul>
+  </li>
   <li>用悪水路 かんがい用又は悪水はいせつ用の水路</li>
   <li>ため池 耕地かんがい用の用水貯留池</li>
   <li>堤 防水のために築造した堤防</li>
@@ -87,7 +96,7 @@
   <li>保安林 森林法に基づき農林水産大臣が保安林として指定した土地</li>
   <li>公衆用道路 一般交通の用に供する道路 (道路法による道路であるかどうかを問わない)</li>
   <li>公園 公衆の遊楽のために供する土地</li>
-  <li>雑種地 以上のいずれにも該当しない土地</li>
+  <li>雑種地 以上のいずれにも該当しない土地
     <ul>
     <li>高圧線の下の土地で他の目的に使用することができない区域は、雑種地</li>
     <li>鉄塔敷地又は変電所敷地は、雑種地</li>
@@ -95,6 +104,7 @@
     <li>製錬所の煙道敷地は、雑種地</li>
     <li>木場の区域内の土地は、建物がない限り、雑種地</li>
     </ul>
+  </li>
 </ol>
 </section>
 
