Modify invalid header

--- a/experiment/something-like-a-list-of-mottos.html
+++ b/experiment/something-like-a-list-of-mottos.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="未来の自分へ、目標、ルール、思い">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://nobi56.github.io/experiment/something-like-a-list-of-mottos.html">
-  <link rel="stylesheet" href="/assets/article.css"></head>
+  <link rel="stylesheet" href="/assets/article.css">
 </head>
 <body>
 
