--- a/experiment/on-Windows.html
+++ b/experiment/on-Windows.html
@@ -79,7 +79,7 @@
 
   <p>何度かシェルスクリプト中から呼ぶうち、"%w"の出力をスラッシュ区切りで欲しくなり、当該出力がフォーマット指定子"%u"から得られるよう、Runner.cs中Outputメソッドへ記述を追加。</p>
 
-  <p>(なおパスまわりには、<a href="https://docs.microsoft.com/ja-jp/dotnet/standard/io/file-path-formats#unc-paths">UNCパス</a>という仕組みがあるわけで、"%u"では紛らわしいかもしれない。また、そもそもinotify-winはinotify-toolsに沿う移植がなされており、安易にあれこれ追加するのも違うかもしれない。UNCパスを想起させず、inotify-toolsとは別個の独自指定子であることが伝わり、かつ、(できれば)スラッシュ区切りであることが分かるような、そんな文字(列)が思いつくといいけれど。)</p>
+  <p>(なおパスまわりには、<a href="https://docs.microsoft.com/ja-jp/dotnet/standard/io/file-path-formats#unc-paths">UNCパス</a>という仕組みがあるわけで、"%u"では紛らわしいかもしれない。また、そもそもinotify-winはinotify-toolsに沿う移植がなされており、安易にあれこれ追加するのも違うかもしれない。UNCパスを想起させず、inotify-toolsとは別個独自の指定子であることが伝わり、かつ、(できれば)スラッシュ区切りであることが分かるような、そんな文字(列)を思いつくといいけれど。)</p>
 </section>
 
 <section id="005">
@@ -104,6 +104,18 @@
 </section>
 
 <section id="006">
+  <p>LuaSecの導入</p>
+
+  <ul>
+  <li>入手先: <a href="https://github.com/brunoos/luasec">GitHub - brunoos/luasec: LuaSec</a></li>
+  </ul>
+
+  <p>依存するOpenSSLないしLua/LuaJITやLuaSocketとあわせて、Debian(buster)上のMinGWでクロスコンパイル。OpenSSLやLuaJITは、MinGWでのクロスコンパイルについて、ドキュメント(<a href="https://github.com/openssl/openssl/blob/master/INSTALL.md#cross-compile-prefix">Cross Compile Prefix</a>、<a href="https://luajit.org/install.html#cross">Cross-compiling LuaJIT</a>など)やMakefileに考慮があり、そちらに倣う。LuaやLuaSocketはMinGWの使用につきMakefileに考慮があり、そちらに手を入れる。LuaSecにはそういった仕組みはおそらくないため、Makefile、src/Makefile、src/luasocket/Makefileにその場しのぎの修正(<a href="https://pastebin.com/b2kAjD2f">一応の差分</a>)をする。</p>
+
+  <p>(なおLuaSecに内包されるLuaSocketのコードは、GIT版のLuaSocketのものより以前のもののため、timeoutまわりの記述などが少し異なる。といって新たに追加されたtimeout_meth_gettimeoutが未実装であること以外、あまり違いはなさそう(*)。当該未実装部分も、それがもとで即動作に影響が出るとは思われないことから、とりあえずそのまま。(* 違いの一つに、LUASOCKET_DEBUGが有効にされていれば現行とほぼ同じ扱いになるものがあるが、LuaSecでは当該マクロが以前から有効))</p>
+</section>
+
+<section id="007">
   <p>Scancode Mapの設定</p>
 
   <ul>
